tests/tests_p1/pass/prof/48ok.min
module
  function public number x number y do number x; x := 12; return x + y
end
