tests/tests_p1/fail/prof/48noshadow.min
module
  function public number x number x do number x; x := 12; return x + x
end
